Implement Movie Detail Fragment with Ui components

--- a/feature_movies/src/main/res/values/strings.xml
+++ b/feature_movies/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="data_not_found">Data not found</string>
     <string name="itemDescription">Item Description</string>
+    <string name="toolbar_image">Toolbar Image</string>
+    <string name="overview">Overview</string>
 </resources>
