Hide tv series, favourites and profile modules for first release. TODO: Unit tests

--- a/feature_movies/src/main/res/values/strings.xml
+++ b/feature_movies/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="itemDescription">Item Description</string>
     <string name="toolbar_image">Toolbar Image</string>
     <string name="overview">Overview</string>
+    <string name="casts">Casts</string>
+    <string name="similar_movies">Similar Movies</string>
 </resources>
