--- a/feature_movies/src/main/res/values/strings.xml
+++ b/feature_movies/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="overview">Overview</string>
     <string name="casts">Casts</string>
     <string name="similar_movies">Similar Movies</string>
+    <string name="error_connection_internet">Error connection. Try again</string>
 </resources>
